# RTS_GALAXY

./: .rustc_info.json  Cargo.toml  README.md  cleanup.ps1
assets/: README.md  asset_manifest.json
assets/models/: README.md
assets/models/buildings/: command_center.glb  defense_turret.glb  energy_plant.glb  headquarters.glb  research_lab.glb  shield_generator.glb  starport.glb  war_factory.glb
assets/models/buildings/barracks/: barracks.glb
assets/models/buildings/barracks/animations/: construction.glb  damaged.glb  deployment.glb  destroyed.glb  drill_mode.glb  idle.glb  training.glb
assets/models/buildings/defense_turret/: defense_turret.glb
assets/models/buildings/defense_turret/animations/: construction.glb  damaged.glb  destroyed.glb  firing.glb  idle.glb  reloading.glb  scanning.glb  targeting.glb  turret_rotate.glb
assets/models/buildings/energy_plant/: energy_plant.glb
assets/models/buildings/energy_plant/animations/: construction.glb  cooling_cycle.glb  damaged.glb  destroyed.glb  energy_surge.glb  idle.glb  overload.glb  power_generation.glb
assets/models/buildings/headquarters/: headquarters.glb
assets/models/buildings/headquarters/animations/: command_active.glb  communication.glb  construction.glb  damaged.glb  destroyed.glb  emergency_mode.glb  idle.glb  shield_up.glb
assets/models/buildings/war_factory/: war_factory.glb
assets/models/buildings/war_factory/animations/: assembly_line.glb  construction.glb  damaged.glb  destroyed.glb  heavy_production.glb  idle.glb  manufacturing.glb  vehicle_rollout.glb
assets/models/effects/explosion/: explosion.glb
assets/models/effects/explosion/animations/: explode.glb
assets/models/resources/energy/: energy.glb
assets/models/resources/energy/animations/: energy_pulse.glb  idle.glb
assets/models/resources/minerals/: minerals.glb
assets/models/units/fighter/: fighter.glb
assets/models/units/ranger/: ranger.glb
assets/models/units/tank/: tank.glb
assets/models/units/worker/: worker.glb
assets/music/: README.md
assets/sounds/: README.md
docs/: ASSET_SYSTEM.md  NETWORK_ARCHITECTURE.md  ZOOM_SYSTEM.md
src/: ai.rs  game.rs  lib.rs  main.rs  menu.rs  network.rs  ui.rs
src/admin/: asset_inspector.rs  mod.rs  ui.rs
src/ai/: behaviors.rs  controller.rs  mod.rs
src/audio/: manager.rs  mod.rs
src/entity/: building.rs  mod.rs  player.rs  resource_node.rs  types.rs  unit.rs
src/game/: commands.rs  mod.rs  modes.rs  rendering.rs  resources.rs  screens.rs  state.rs  types.rs  zoom.rs
src/network/: client.rs  messages.rs  mod.rs
src/resources/: manager.rs  mod.rs  model3d.rs
src/ui/: game_ui.rs  mod.rs
src/ui/menu/: credits.rs  main_menu.rs  mod.rs  settings.rs  system.rs
(+29 files in other folders)
