[package]
name = "rts_galaxy"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"

[[bin]]
name = "galaxy_rts"
path = "src/main.rs"
