[package]
name = "rts_galaxy"
version = "0.1.0"
edition = "2021"
authors = ["RTS Galaxy Team"]
description = "Advanced Real-Time Strategy Game with Galactic Scale Zoom"
license = "MIT"
repository = "https://github.com/yourusername/rts-galaxy"

[dependencies]
# Core game engine
macroquad = { version = "0.4", features = ["audio"] }

# Serialization for save/load and networking
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime for networking (made optional)
tokio = { version = "1.0", features = ["full"], optional = true }

# Math and utilities
rand = "0.8"
nalgebra = "0.32"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Configuration
config = "0.13"

# Compression for networking (made optional)
flate2 = { version = "1.0", optional = true }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "zoom_performance"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[features]
default = ["audio"]
audio = []
networking = ["tokio", "flate2"]
debug = []

[[bin]]
name = "galaxy_rts"
path = "src/main.rs"
