[package]
name = "rts_galaxy"
version = "0.1.0"
edition = "2021"
authors = ["RTS Galaxy Team"]
description = "A real-time strategy game spanning from individual units to cosmic scales"
license = "MIT"
repository = "https://github.com/rts-galaxy/rts-galaxy"

[dependencies]
macroquad = { version = "0.4", features = ["serde"] }
egui = "0.23"
egui-macroquad = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
flate2 = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
network = ["tokio", "futures"]
admin = ["network"]

[[bin]]
name = "rts_galaxy"
path = "src/main.rs"

# Remove the problematic benchmark configuration for now
# We can add it back later when we create the actual benchmark files

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
